FEAT - Implemented HATEOAS to the API adding one level more to the RESTful API
