# swagger.yaml
@@ -9,7 +9,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0
-  version: v3
+  version: v5
 servers:
 - url: http://localhost:8080
   description: Development
@@ -182,6 +182,31 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Endereco'
+  /pessoas/{idPessoa}/enderecos/{idEndereco}:
+    get:
+      tags:
+      - Endereços Controller
+      summary: Consultar endereço por ID
+      description: Consulta o endereço da pessoa pelo ID do endereço.
+      operationId: consultarEnderecoPorID
+      parameters:
+      - name: idPessoa
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: idEndereco
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Endereco'
   /pessoas/{idPessoa}/endereco-principal:
     get:
       tags:
@@ -222,6 +247,12 @@ components:
           type: string
         principal:
           type: boolean
+        _links:
+          $ref: '#/components/schemas/Links'
+    Links:
+      type: object
+      additionalProperties:
+        $ref: '#/components/schemas/Link'
     Pessoa:
       type: object
       properties:
@@ -236,3 +267,24 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Endereco'
+        _links:
+          $ref: '#/components/schemas/Links'
+    Link:
+      type: object
+      properties:
+        href:
+          type: string
+        hreflang:
+          type: string
+        title:
+          type: string
+        type:
+          type: string
+        deprecation:
+          type: string
+        profile:
+          type: string
+        name:
+          type: string
+        templated:
+          type: boolean
